--- a/.gitignore
+++ b/.gitignore
@@ -10,9 +10,8 @@ lib_managed/
 lib/
 out/
 target/
-build/
 project/boot/
-project/build/target
+project/build/target/
 project/plugins/lib_managed/
 project/plugins/src_managed/
 project/plugins/target/
