--- a/project/build.properties
+++ b/project/build.properties
@@ -5,5 +5,5 @@ project.name=maybe
 sbt.version=0.7.7
 project.version=0.1-SNAPSHOT
 publish.remote=false
-build.scala.versions=2.9.0 2.9.0-1
+build.scala.versions=2.9.1 2.9.0-1 2.9.0 2.8.1
 project.initialize=false
