--- a/project/build.properties
+++ b/project/build.properties
@@ -19,7 +19,7 @@
 project.organization=com.ckkloverdos
 project.name=maybe
 sbt.version=0.7.7
-project.version=0.1.0
+project.version=0.2.1
 publish.remote=false
-build.scala.versions=2.9.1 2.8.2
+build.scala.versions=2.9.1 2.8.2 2.8.1
 project.initialize=false
