A couple of handy API additions (finallyMap, safeUnit)

--- a/project/build.properties
+++ b/project/build.properties
@@ -1,5 +1,5 @@
 #
-# Copyright 2011-2011 Christos KK Loverdos
+# Copyright 2011-2012 Christos KK Loverdos
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -21,5 +21,5 @@ project.name=maybe
 sbt.version=0.7.7
 project.version=0.4.0-SNAPSHOT
 publish.remote=false
-build.scala.versions=2.9.1 2.8.2 2.8.1
+build.scala.versions=2.9.1
 project.initialize=false
