--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
   <groupId>com.ckkloverdos</groupId>
   <artifactId>maybe</artifactId>
   <version>0.4.0-SNAPSHOT</version>
-  <packaging>pom</packaging>
+  <packaging>jar</packaging>
 
   <name>Maybe</name>
   <description>
@@ -184,21 +184,6 @@
         <configuration>
           <preparationGoals>clean verify</preparationGoals>
         </configuration>
-      </plugin>
-
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-gpg-plugin</artifactId>
-        <version>1.3</version>
-        <executions>
-          <execution>
-            <id>sign-artifacts</id>
-            <phase>verify</phase>
-            <goals>
-              <goal>sign</goal>
-            </goals>
-          </execution>
-        </executions>
       </plugin>
     </plugins>
   </build>
