--- a/pom.xml
+++ b/pom.xml
@@ -138,10 +138,14 @@
         <artifactId>maven-scala-plugin</artifactId>
         <version>2.15.2</version>
         <configuration>
+          <scalaVersion>${scala.version}</scalaVersion>
           <charset>${project.build.sourceEncoding}</charset>
           <args>
             <arg>-deprecation</arg>
+            <arg>-unchecked</arg>
+            <arg>-optimize</arg>
           </args>
+          <charset>${project.build.sourceEncoding}</charset>
         </configuration>
         <executions>
           <execution>
@@ -180,10 +184,15 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-release-plugin</artifactId>
-        <version>2.2.1</version>
+        <version>2.2.2</version>
         <configuration>
           <preparationGoals>clean verify</preparationGoals>
         </configuration>
+      </plugin>
+
+      <plugin>
+        <artifactId>maven-repository-plugin</artifactId>
+        <version>2.3.1</version>
       </plugin>
     </plugins>
   </build>
