--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 
     Inspired by Lift's Box, Haskell's Maybe and Scala's Option.
 
-    We innovate in a few areas, especially regarding the existing Scala APIs:
+    A few noteable characteristics:
 
     * `Maybe()` is a polymorphich constructor that Does The Right Thing, no matter the input.
     * `get` is only provided for a `Just` value, not in the general `Maybe` API.
@@ -134,8 +134,9 @@
       <plugin>
         <groupId>net.alchim31.maven</groupId>
         <artifactId>scala-maven-plugin</artifactId>
-        <version>3.0.1</version>
+        <version>3.1.0</version>
         <configuration>
+          <recompileMode>incremental</recompileMode>
           <scalaVersion>${scala.version}</scalaVersion>
           <charset>${project.build.sourceEncoding}</charset>
           <args>
